2008-06-11  Øyvind Kolås  <pippin@gimp.org>

	* clutter-gegl.[ch]: copmuted the desired render size from the nodes
	bounding box for the default simple constructor.
	* examples/Makefile.am: made the makefile build all .c files into
	individual binaries.
	* examples/parsexml.c: (main): set the stage size to the actor size.

2008-06-11  Øyvind Kolås  <pippin@gimp.org>

	* Makefile.am: install in 0.7 directories.
	* configure.ac: update clutter requirement to 0.7
	* clutter-gegl.pc.in: fixed paths to reflect 0.7

2008-03-03  Øyvind Kolås  <pippin@o-hand.com>

	* Makefile.am: create clutter-gegl-x.x.pc from clutter-gegl.pc

	* configure.ac:
	* clutter-gegl.pc.in: updated clutter dependency to 0.6, updated
	clutter-gegl version to 0.6 as well.

2008-03-03  Øyvind Kolås  <pippin@o-hand.com>

	* examples/parsexml.c: updated default composition to match current
	GEGL default composition.
	* clutter-gegl.c: (computed_event): reindented code.

2008-01-10  Øyvind Kolås     <pippin@o-hand.com>

	* Imported into svn.

2007-10-20  Øyvind Kolås     <pippin@gimp.org>

	* Duplicated the clutter-cairo tree, and adapted it to render for
	  GEGL instead of cairo.

2007-08-15  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac:
	* Makefile.am:
	* clutter-gegl.pc.in: Bump up to 0.5.0 and require clutter-0.5
	as well.

2007-08-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac: Bump up to 0.4.0.

	* clutter-gegl.pc.in: Require clutter-0.4.

2007-08-01  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter-gegl.c: Now that we ensure that we are not accessing
	the gegl_surface_t object when the texture actor has been destroyed
	before the gegl_t context, we can destroy the surface when disposing
	of the texture.

2007-08-01  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter-gegl.c: Attach the ClutterGegl texture actor to the
	surface and use clutter_surface_finish() to dispose of the
	gegl_surface_t we use to generate the gegl context. This plugs